# PapersTagsPrediction

./: README.md  pyproject.toml
notebooks/: lda_embeddings.ipynb  lda_test.ipynb  parse_habr.ipynb  related_works.ipynb  rubert.ipynb  test.ipynb
src/deepxml/: attentionxml.py  cornet.py  data_utils.py  evaluation.py  models.py  xmlcnn.py
src/models/: dataset.py  lda_correction_network.py  lda_encoders.py  preprocessing.py  rubert.py
src/parsing/: habr.py
