[tool.poetry]
name = "papers-tags-prediction"
version = "0.1.0"
description = ""
authors = ["Trubin <trybin420@gmail.com>"]
readme = "README.md"
packages = [{ include = "parsing", from = "src" },
           { include = "models", from = "src" },]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.2"
tqdm = "^4.66.2"
pyarrow = "^15.0.2"
html5lib = "^1.1"
nltk = "^3.8.1"
gensim = "^4.3.2"
scikit-learn = "^1.4.2"
scipy = "1.12"
torch = "^2.3.0"
navec = "^0.10.0"
transformers = "^4.40.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
wordcloud = "^1.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
